--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 h1{
@@ -12,7 +13,16 @@ h1{
     float: left;
     margin-left: 5%;
     padding-left: 2%;
+    
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+
+}
+section{
+    height:500px;
 }
